--- a/angular.json
+++ b/angular.json
@@ -89,7 +89,10 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/@ng-select/ng-select/themes/default.theme.css",
-              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/ngx-spinner/animations.css",
+              "node_modules/ngx-spinner/animations/ball-clip-rotate.css",
+               "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": [
                "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
