--- a/angular.json
+++ b/angular.json
@@ -73,6 +73,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "karmaConfig": "karma.conf.js", 
             "polyfills": [
               "zone.js",
               "zone.js/testing"
@@ -90,7 +91,6 @@
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/@ng-select/ng-select/themes/default.theme.css",
               "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "node_modules/ngx-spinner/animations.css",
               "node_modules/ngx-spinner/animations/ball-clip-rotate.css",
                "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
