--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "@ng-select/ng-select": "^13.1.0",
+    "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "ngx-skeleton-loader": "^9.0.0",
     "ngx-spinner": "^17.0.0",
